Fix share overlay layout bug on small viewports

--- a/assets/app/components/overlay.scss
+++ b/assets/app/components/overlay.scss
@@ -40,11 +40,7 @@
     bottom: 0;
     left: 0;
     overflow: auto;
-    align-items: flex-start;
-
-    @media (min-width: $smartphone + 100) {
-      align-items: center;
-    }
+    align-items: center;
   }
 
   &-wrap {
